WebPage_main changes

--- a/NERVAS_web/Main.html
+++ b/NERVAS_web/Main.html
@@ -15,7 +15,6 @@
       <li><a href="Main.html">Inicio</a></li>
       <li><a href="about.html">Nosotros</a></li>
       <li><a href="cursos.html">Aprendizaje</a></li>
-      <li><a href="#">Iniciar Sesión</a></li>
     </ul>
   </nav>
      <section id="home">
@@ -24,8 +23,8 @@
         <h1>Descubre tus habilidades de hacker</h1>
         <p>Aprende habilidades demandadas en el mercado con cursos diseñados por expertos. Educación de calidad accesible para todos.</p>
         <div class="cta-buttons">
-          <a href="#courses" class="btn">Explorar Cursos</a>
-          <a href="#about" class="btn secondary">Conocer Más</a>
+          <a href="cursos.html" class="btn">Explorar Cursos</a>
+          <a href="about.html" class="btn secondary">Conocer Más</a>
         </div>
       </div>
       <!--<div class="icon-box">
@@ -49,29 +48,38 @@
     </div>
   </div>
 </section>
-  <section class="bottom-section">
-    <div class="bottom-card">
-      <div class="icon"><img src="images/mission.png" alt="Logo" /></div>
-      <div class="section-header-mission">
-      <h2>Nuestra Misión</h2>
-    </div>
-      <p class="text-m">Brindar a los estudiantes de ciberseguridad de nuestra institución acceso a una plataforma que les exponga a entornos simulados tan similares como posible a casos en la vida real.</p>
-    </div>
-    <div class="bottom-card">
-      <div class="icon"><img src="images/vission.png" alt="Logo" /></div>
-      <div class="section-header-vission">
-      <h2>Nuestra Visión</h2>
-    </div>
-      <p class="text-v">Ser una plataforma útil y beneficiosa para el desarrollo de los estudiantes de nuestra institución en materia de ciberseguridad.</p>
-    </div>
-    <div class="bottom-card">
-      <div class="icon"><img src="images/values.png" alt="Logo" /></div>
-      <div class="section-header-values">
-      <h2>Nuestros Valores</h2>
-    </div>
-      <p class="text-vv">· Excelencia educativa<br>· Innovación constante<br>· Accesibilidad para todos<br>· Conocimiento realista</p>
-    </div>
-  </section>
+  <div class="mvv-section">
+        <div class="section-container">
+          <br>
+            <h2>Nuestra Esencia</h2>
+            <p class="section-subtitle">Los principios que guían cada decisión en NervaS</p>
+           
+            <div class="mvv-grid">
+                <div class="mvv-card">
+                    <div class="mvv-icon"></div>
+                    <h3 style="color: #359b57;">Misión</h3>
+                    <p>Brindar a los estudiantes de ciberseguridad de nuestra institución acceso a una plataforma que les exponga a entornos simulados tan similares como posible a casos en la vida real.</p>
+                </div>
+                <div class="mvv-card">
+                    <div class="mvv-icon"></div>
+                    <h3 style="color: #ffd12c;">Visión</h3>
+                    <p>Ser una plataforma útil y beneficiosa para el desarrollo de los estudiantes de nuestra institución en materia de ciberseguridad.</p>
+                </div>
+                <div class="mvv-card">
+                    <div class="mvv-icon"></div>
+                    <h3 style="color: #fd6824;">Valores</h3>
+                    <ul class="values-list">
+                        <li>✓ Excelencia educativa</li>
+                        <li>✓ Innovación constante</li>
+                        <li>✓ Accesibilidad para todos</li>
+                        <li>✓ Conocimiento realista</li>
+                        <li>✓ Integridad y transparencia</li>
+                    </ul>
+                </div>
+            </div>
+            <br>
+        </div>
+        </div>
             <!-- Nuestro Equipo -->
         <section class="destinations" style="align-content: center !important;">
   <h2>Nuestros Integrantes</h2>
@@ -158,25 +166,9 @@ dots.forEach((dot, index) => {
     </script>
 
    <footer>
-  <div class="footer-content">
-    <div class="footer-section">
-      <h4>NervaS</h4>
-      <p>Plataforma de aprendizaje comprometida con tu éxito profesional.</p>
-    </div>
-    <div class="footer-section">
-      <h4>Aprendizaje</h4>
-      <ul>
-        <li><a href="#">Brute Force</a></li>
-        <li><a href="#">XSS Scripting</a></li>
-        <li><a href="#">DoS</a></li>
-        <li><a href="#">DDoS</a></li>
-        <li><a href="#">Todos</a></li>
-      </ul>
-    </div>
-  </div>
-  <div class="footer-bottom">
-    <p>&copy; 2024 NervaS. Todos los derechos reservados.</p>
-  </div>
+    <p style="text-align: center; font-weight: bold;"> NervaS EXPOTEC 2025</p>
+    <p style="text-align: center;">&copy; 2024 NervaS. Todos los derechos reservados.</p>
+
 </footer>
 </body>
 </html>
